feat(browser): add support for iframe

--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "bluebird": "3.4.7",
     "boom": "4.2.0",
     "hapi": "16.1.0",
+    "hapi-swagger": "^7.6.0",
     "health-checkup": "1.0.4",
+    "inert": "^4.1.0",
+    "joi": "^10.2.2",
     "lodash": "4.17.4",
     "moment": "2.17.1",
     "nightmare": "2.9.1",
+    "nightmare-iframe-manager": "0.0.4",
     "random-http-useragent": "1.0.1",
     "rollbar": "0.6.3",
+    "vision": "^4.1.1",
     "winston": "2.3.1"
   },
   "devDependencies": {
@@ -51,7 +56,7 @@
     "lint": "node_modules/.bin/eslint .",
     "coverage": "node_modules/.bin/istanbul cover --include-all-sources --root src --print detail ./node_modules/mocha/bin/_mocha -- --recursive test",
     "test": "npm run lint && npm run coverage",
-    "build": "$(which docker) build -t hfreire/$npm_package_name:$npm_package_version --build-arg=VERSION=`$(which git) rev-parse --abbrev-ref HEAD` --build-arg=VERSION_COMMIT=`$(which git) rev-parse --short HEAD` --build-arg=VERSION_BUILD_DATE=\"`$(which date)`\" -f ./share/docker/Dockerfile .",
+    "build": "$(which docker) build -t hfreire/$npm_package_name:$npm_package_version --build-arg=NAME=$npm_package_name --build-arg=VERSION=`$(which git) rev-parse --abbrev-ref HEAD` --build-arg=VERSION_COMMIT=`$(which git) rev-parse --short HEAD` --build-arg=VERSION_BUILD_DATE=\"`$(which date)`\" -f ./share/docker/Dockerfile .",
     "push": "$(which docker) push hfreire/$npm_package_name:$npm_package_version",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "start": "node src/app.js",
