fix(docker): fix rancher and docker-compose configuration files

--- a/share/docker/Dockerfile
+++ b/share/docker/Dockerfile
@@ -3,6 +3,8 @@ FROM node:6-slim
 MAINTAINER hugo@exec.sh
 
 # Set version information available for runtime
+ARG NAME
+ENV NAME $NAME
 ARG VERSION
 ENV VERSION $VERSION
 ARG VERSION_COMMIT
@@ -10,12 +12,12 @@ ENV VERSION_COMMIT $VERSION_COMMIT
 ARG VERSION_BUILD_DATE
 ENV VERSION_BUILD_DATE $VERSION_BUILD_DATE
 
+ENV HOME /opt/browser-as-a-service
+
 RUN apt-get update &&\
     apt-get install -y libgtk2.0-0 libgconf-2-4 \
     libasound2 libxtst6 libxss1 libnss3 xvfb &&\
     apt-get clean
-
-ENV HOME /opt/browser-as-a-service
 
 # Create app directory
 RUN mkdir -p $HOME
