chore(package): removed unnused dependencies

--- a/package.json
+++ b/package.json
@@ -16,19 +16,16 @@
     "bluebird": "3.4.7",
     "boom": "4.2.0",
     "hapi": "16.1.0",
-    "hapi-swagger": "^7.6.0",
+    "hapi-swagger": "7.6.0",
     "health-checkup": "1.0.4",
-    "inert": "^4.1.0",
-    "joi": "^10.2.2",
+    "inert": "4.1.0",
+    "joi": "10.2.2",
     "lodash": "4.17.4",
-    "modern-logger": "^1.0.0",
-    "moment": "2.17.1",
+    "modern-logger": "1.0.0",
     "nightmare": "2.9.1",
     "nightmare-iframe-manager": "0.0.4",
     "random-http-useragent": "1.0.1",
-    "rollbar": "0.6.3",
-    "vision": "^4.1.1",
-    "winston": "2.3.1"
+    "vision": "4.1.1"
   },
   "devDependencies": {
     "babel-eslint": "7.1.1",
