--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
   },
   "homepage": "https://github.com/hfreire/browser-as-a-service#readme",
   "dependencies": {
-    "bluebird": "3.5.0",
-    "boom": "4.2.0",
-    "hapi": "16.1.0",
-    "hapi-swagger": "7.7.0",
-    "health-checkup": "1.0.6",
-    "inert": "4.1.0",
-    "joi": "10.2.2",
-    "lodash": "4.17.4",
-    "modern-logger": "1.2.1",
-    "nightmare": "2.10.0",
-    "nightmare-iframe-manager": "0.0.4",
-    "random-http-useragent": "1.0.1",
-    "vision": "4.1.1"
+    "bluebird": "^3.5.0",
+    "boom": "^4.2.0",
+    "hapi": "^16.1.0",
+    "hapi-swagger": "^7.7.0",
+    "health-checkup": "^1.0.6",
+    "inert": "^4.1.0",
+    "joi": "^10.2.2",
+    "lodash": "^4.17.4",
+    "modern-logger": "^1.2.1",
+    "nightmare": "^2.10.0",
+    "nightmare-iframe-manager": "^0.0.4",
+    "random-http-useragent": "^1.0.1",
+    "vision": "^4.1.1"
   },
   "devDependencies": {
-    "babel-eslint": "7.1.1",
-    "chai": "3.5.0",
-    "chai-as-promised": "6.0.0",
-    "coveralls": "2.11.16",
-    "eslint": "3.17.0",
-    "eslint-config-standard": "7.0.0",
-    "eslint-plugin-mocha": "4.8.0",
-    "eslint-plugin-promise": "3.5.0",
-    "eslint-plugin-standard": "2.0.1",
-    "istanbul": "0.4.5",
-    "mocha": "3.2.0",
-    "semantic-release": "6.3.2",
-    "pre-git": "3.14.0",
-    "standard": "9.0.0",
-    "testdouble": "1.11.2"
+    "babel-eslint": "^7.1.1",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "coveralls": "^2.11.16",
+    "eslint": "^3.17.0",
+    "eslint-config-standard": "^7.0.0",
+    "eslint-plugin-mocha": "^4.8.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "istanbul": "^^0.4.5",
+    "mocha": "^3.2.0",
+    "semantic-release": "^6.3.2",
+    "pre-git": "^3.14.0",
+    "standard": "^9.0.0",
+    "testdouble": "^1.11.2"
   },
   "config": {
     "pre-git": {
