--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
-    "istanbul": "^^0.4.5",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "semantic-release": "^6.3.2",
     "pre-git": "^3.14.0",
