chore(travis): enable docker service

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ after_success:
   - npm run semantic-release
   - if [ "$TRAVIS_BRANCH" == "master" ] || [ ! -z "$TRAVIS_TAG" ]; then
       docker login --username=${DOCKER_USERNAME} --password=${DOCKER_PASSWORD};
+      echo "VERSION is $(if [ -z ${VERSION-} ]; then echo latest; else echo $VERSION; fi)"
       export VERSION=$(if [ ! -z "$TRAVIS_TAG" ]; then echo $TRAVIS_TAG; fi);
       npm run build;
       npm run push;
