chore: add docker hooks

--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "coverage": "node_modules/.bin/istanbul cover --include-all-sources --root src --print detail ./node_modules/mocha/bin/_mocha -- --recursive test",
     "test": "npm run lint && npm run coverage",
     "semantic-release": "./node_modules/.bin/semantic-release pre && node_modules/.bin/semantic-release post",
-    "build": "NAME=$npm_package_name ./share/docker/hooks/build",
-    "push": "NAME=$npm_package_name ./share/docker/hooks/push",
+    "build": "pushd ./share/docker; NAME=$npm_package_name ./hooks/build; popd",
+    "push": "pushd ./share/docker; NAME=$npm_package_name ./hooks/push; popd",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "start": "node src/app.js"
   }
