--- a/share/docker/hooks/build
+++ b/share/docker/hooks/build
@@ -9,9 +9,10 @@ VERSION_BUILD_DATE=$(which date)
 
 IMAGE_NAME=$(if [ -z ${IMAGE_NAME-} ]; then echo hfreire/$NAME:$VERSION; else echo $IMAGE_NAME; fi)
 
-$(which docker) build -t ${IMAGE_NAME} \
+$(which docker) build -t ${IMAGE_NAME} -f Dockerfile \
 --build-arg=NPM_TOKEN=${NPM_TOKEN} \
 --build-arg=NAME=${NAME} \
 --build-arg=VERSION=${VERSION} \
 --build-arg=VERSION_COMMIT=${VERSION_COMMIT} \
---build-arg=VERSION_BUILD_DATE=\"${VERSION_BUILD_DATE}\"
+--build-arg=VERSION_BUILD_DATE=\"${VERSION_BUILD_DATE}\" \
+../..
