--- a/share/docker/hooks/build
+++ b/share/docker/hooks/build
@@ -3,7 +3,7 @@
 [ -z ${NAME-} ] && exit 1
 [ -z ${NPM_TOKEN-} ] && exit 1
 
-VERSION=$(if [ -z ${VERSION-} ]; then echo $(if [ -z ${$DOCKER_TAG-} ]; then echo latest; else echo $DOCKER_TAG; fi); else echo $VERSION; fi)
+VERSION=$(if [ -z ${VERSION-} ]; then echo $(if [ -z ${DOCKER_TAG-} ]; then echo latest; else echo $DOCKER_TAG; fi); else echo $VERSION; fi)
 VERSION_COMMIT=$(if [ -z ${VERSION_COMMIT-} ]; then echo $(if [ -z ${SOURCE_COMMIT-} ]; then echo `$(which git) rev-parse --short HEAD`; else echo SOURCE_COMMIT; fi); else echo $VERSION_COMMIT; fi)
 VERSION_BUILD_DATE=`$(which date)`
 
