--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/hfreire/browser-as-a-service#readme",
   "dependencies": {
     "bluebird": "3.5.0",
+    "health-checkup": "1.0.8",
     "lodash": "4.17.4",
     "modern-logger": "1.3.7",
     "nightmare": "2.10.0",
@@ -30,7 +31,7 @@
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-mocha": "4.9.0",
     "eslint-plugin-promise": "3.5.0",
-    "eslint-plugin-standard": "2.2.0",
+    "eslint-plugin-standard": "3.0.1",
     "istanbul": "0.4.5",
     "last-release-github": "1.1.1",
     "mocha": "3.4.2",
