chore: upgrade eslint-config-hfreire to version 1.0.3

--- a/package.json
+++ b/package.json
@@ -28,17 +28,19 @@
     "chai-as-promised": "7.0.0",
     "coveralls": "2.13.1",
     "eslint": "3.19.0",
-    "eslint-config-hfreire": "1.0.1",
-    "eslint-plugin-mocha": "4.9.0",
+    "eslint-config-hfreire": "1.0.3",
     "eslint-plugin-import": "2.3.0",
+    "eslint-plugin-json": "1.2.0",
+    "eslint-plugin-mocha": "4.9.0",
     "eslint-plugin-node": "5.0.0",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
+    "eslint-plugin-unicorn": "2.1.1",
     "istanbul": "0.4.5",
     "last-release-github": "1.1.1",
     "mocha": "3.4.2",
-    "semantic-release": "6.3.6",
     "pre-git": "3.14.1",
+    "semantic-release": "6.3.6",
     "testdouble": "3.0.0"
   },
   "config": {
@@ -52,7 +54,7 @@
   "scripts": {
     "commit": "./node_modules/.bin/commit-wizard",
     "clean": "rm -rf coverage",
-    "lint": "node_modules/.bin/eslint .",
+    "lint": "node_modules/.bin/eslint . --ext .json --ext .js",
     "coverage": "node_modules/.bin/istanbul cover --include-all-sources --root src --print detail ./node_modules/mocha/bin/_mocha -- --recursive test",
     "test": "npm run lint && npm run coverage",
     "semantic-release": "./node_modules/.bin/semantic-release pre && node_modules/.bin/semantic-release post",
