--- a/share/docker/Dockerfile
+++ b/share/docker/Dockerfile
@@ -21,7 +21,7 @@ WORKDIR $HOME
 
 RUN apt-get update &&\
     apt-get install -y libgtk2.0-0 libgconf-2-4 libasound2 libxtst6 libxss1 libnss3 xvfb &&\
-    apt-get install git
+    apt-get install -y git
 
 # Install app dependencies
 COPY package.json $HOME
