--- a/share/docker/Dockerfile
+++ b/share/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:6.11.0-slim
+FROM node:6.11.3-slim
 
 MAINTAINER hugo@exec.sh
 
@@ -33,8 +33,13 @@ RUN apt-get remove --purge -y git &&\
     apt-get autoremove --purge -y &&\
     apt-get clean
 
-COPY share/docker/entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
+COPY share/docker/start.sh /start.sh
+RUN chmod +x /start.sh
+COPY share/docker/test.sh /test.sh
+RUN chmod +x /test.sh
 
 EXPOSE 3000
-ENTRYPOINT [ "/entrypoint.sh" ]
+ENTRYPOINT [ "/start.sh" ]
+
+HEALTHCHECK --start-period=10s --interval=5m --timeout=3s \
+  CMD nc -z localhost 3000 || exit 1
