--- a/share/docker/Dockerfile
+++ b/share/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:6.11.3-slim
+FROM node:8.9.0-slim
 
 MAINTAINER hugo@exec.sh
 
@@ -21,7 +21,7 @@ WORKDIR $HOME
 # Install app runtime and build dependencies
 RUN apt-get update &&\
     apt-get install -y libgtk2.0-0 libgconf-2-4 libasound2 libxtst6 libxss1 libnss3 xvfb &&\
-    apt-get install -y git
+    apt-get install -y git netcat
 COPY package.json $HOME
 RUN npm install --production
 
