chore(docker): separate git installation from netcat

--- a/share/docker/Dockerfile
+++ b/share/docker/Dockerfile
@@ -21,7 +21,8 @@ WORKDIR $HOME
 # Install app runtime and build dependencies
 RUN apt-get update &&\
     apt-get install -y libgtk2.0-0 libgconf-2-4 libasound2 libxtst6 libxss1 libnss3 xvfb &&\
-    apt-get install -y git netcat
+    apt-get install -y git &&\
+    apt-get install -y netcat &&\
 COPY package.json $HOME
 RUN npm install --production
 
