--- a/share/docker/Dockerfile
+++ b/share/docker/Dockerfile
@@ -23,6 +23,7 @@ RUN apt-get update &&\
     apt-get install -y libgtk2.0-0 libgconf-2-4 libasound2 libxtst6 libxss1 libnss3 xvfb &&\
     apt-get install -y git &&\
     apt-get install -y netcat &&\
+    apt-get clean
 COPY package.json $HOME
 RUN npm install --production
 
