chore(package): add required node version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "browser-as-a-service",
   "description": "A web browser hosted as a service, to render your JavaScript web pages as HTML",
   "version": "0.0.0",
+  "engines": {
+    "node": ">= 6.0.0"
+  },
   "author": "Hugo Freire <hugo@exec.sh>",
   "license": "MIT",
   "repository": {
@@ -50,7 +53,8 @@
   },
   "config": {
     "pre-git": {
-      "commit-msg": "conventional"
+      "commit-msg": "conventional",
+      "allow-untracked-files": true
     }
   },
   "release": {
