--- a/package.json
+++ b/package.json
@@ -17,32 +17,31 @@
   "homepage": "https://github.com/hfreire/browser-as-a-service#readme",
   "dependencies": {
     "bluebird": "3.5.1",
-    "health-checkup": "1.0.16",
+    "health-checkup": "1.0.19",
     "lodash": "4.17.9",
     "modern-logger": "1.5.20",
     "nightmare": "3.0.1",
     "nightmare-iframe-manager": "0.0.4",
     "random-http-useragent": "1.1.5",
-    "serverful": "1.1.20"
+    "serverful": "1.2.2"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.5",
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
-    "coveralls": "3.0.1",
-    "eslint": "4.9.0",
+    "coveralls": "2.13.3",
+    "eslint": "5.0.1",
     "eslint-config-hfreire": "1.1.0",
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-json": "1.2.0",
     "eslint-plugin-mocha": "5.0.0",
-    "eslint-plugin-node": "5.2.0",
+    "eslint-plugin-node": "6.0.1",
     "eslint-plugin-promise": "3.8.0",
     "eslint-plugin-standard": "3.1.0",
     "eslint-plugin-unicorn": "4.0.3",
     "istanbul": "0.4.5",
     "mocha": "5.2.0",
-    "pre-git": "3.17.0",
-    "semantic-release": "15.6.1",
+    "semantic-release": "15.5.1",
+    "pre-git": "3.17.1",
     "testdouble": "3.8.1"
   },
   "config": {
@@ -58,7 +57,8 @@
         "npmPublish": false
       },
       "@semantic-release/github"
-    ]
+    ],
+    "analyzeCommits": "simple-commit-message"
   },
   "scripts": {
     "eslint": "node_modules/.bin/eslint . --ext .json --ext .js",
