fix(puppeteer): replace nightmare with puppeteer. closes #228

--- a/share/docker/Dockerfile
+++ b/share/docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:8.9.0-slim
+FROM node:10.11-alpine
 
-MAINTAINER hugo@exec.sh
+LABEL maintainer="hugo@exec.sh"
 
 # Set app runtime environment variables
 ARG NPM_TOKEN
@@ -14,33 +14,37 @@ ARG VERSION_BUILD_DATE
 ENV VERSION_BUILD_DATE $VERSION_BUILD_DATE
 
 # Create app directory
-ENV HOME /opt/$NAME
-RUN mkdir -p $HOME
-WORKDIR $HOME
+RUN mkdir -p /home/node/$NAME \
+  && chown node:node /home/node/$NAME
+WORKDIR /home/node/$NAME
 
-# Install app runtime and build dependencies
-RUN apt-get update &&\
-    apt-get install -y libgtk2.0-0 libgconf-2-4 libasound2 libxtst6 libxss1 libnss3 xvfb &&\
-    apt-get install -y git &&\
-    apt-get install -y netcat &&\
-    apt-get clean
-COPY package.json $HOME
-RUN npm install --production
+# Install utils
+RUN apk --no-cache add \
+    su-exec \
+    curl \
+    netcat-openbsd
 
 # Copy app source
-COPY src $HOME/src
+COPY --chown=node:node package.json package.json
+COPY --chown=node:node package-lock.json package-lock.json
+COPY --chown=node:node src src/
+COPY --chown=node:node share/docker/start.sh start.sh
+COPY --chown=node:node share/docker/test.sh test.sh
 
-# Remove app build dependencies
-RUN apt-get remove --purge -y git &&\
-    apt-get autoremove --purge -y
-
-COPY share/docker/start.sh /start.sh
-RUN chmod +x /start.sh
-COPY share/docker/test.sh /test.sh
-RUN chmod +x /test.sh
+# Install npm packages
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
+ENV PUPPETEER_EXECUTABLE_PATH /usr/bin/chromium-browser
+RUN apk update && apk upgrade && \
+    echo @edge http://nl.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
+    echo @edge http://nl.alpinelinux.org/alpine/edge/main >> /etc/apk/repositories && \
+    apk add --no-cache \
+      chromium@edge \
+      nss@edge \
+  && su-exec node npm install --production
 
 EXPOSE 3000
-ENTRYPOINT [ "/start.sh" ]
+
+ENTRYPOINT [ "./start.sh" ]
 
 HEALTHCHECK --start-period=10s --interval=5m --timeout=3s \
   CMD nc -z localhost 3000 || exit 1
