--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,12 @@ sudo: required
 language: node_js
 env:
   global:
-    - VERSION=$TRAVIS_TAG
-    - VERSION_COMMIT=$TRAVIS_COMMIT
-    - TERRAFORM_SHA256=6b8ce67647a59b2a3f70199c304abca0ddec0e49fd060944c26f666298e23418
+  - VERSION=$TRAVIS_TAG
+  - VERSION_COMMIT=$TRAVIS_COMMIT
 services:
-  - docker
+- docker
 node_js:
-  - 8.9.0
+- 10.11
 cache:
   directories:
   - node_modules
@@ -21,29 +20,29 @@ notifications:
     on_failure: always
     on_pull_requests: false
 before_install:
-  - npm install -g greenkeeper-lockfile@1
+- npm install -g greenkeeper-lockfile@1
 install:
-  - npm install
-  - |
-    curl -fSL "https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip" -o terraform.zip && \
-    echo "$TERRAFORM_SHA256 *terraform.zip" | sha256sum -c - && \
-    sudo unzip -d /usr/local/bin/ terraform.zip
+- npm install
+- |
+  curl -fSL "https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip" -o terraform.zip && \
+  echo "6b8ce67647a59b2a3f70199c304abca0ddec0e49fd060944c26f666298e23418 *terraform.zip" | sha256sum -c - && \
+  sudo unzip -d /usr/local/bin/ terraform.zip
 before_script:
-  - npm prune
-  - greenkeeper-lockfile-update
+- npm prune
+- greenkeeper-lockfile-update
 script:
-  - |
-    npm test && \
-    npm run build && \
-    npm run docker:test
+- |
+  npm test && \
+  npm run build && \
+  npm run docker:test
 after_success:
-  - npm run coveralls
-  - npm run semantic-release
-  - |
-    ([ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ] || [ -n "$TRAVIS_TAG" ]) && \
-    echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && \
-    npm run push
-  - |
-    [ -n "$TRAVIS_TAG" ] && npm run deploy
+- npm run coveralls
+- npm run semantic-release
+- |
+  ([ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ] || [ -n "$TRAVIS_TAG" ]) && \
+  echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && \
+  npm run push
+- |
+  [ -n "$TRAVIS_TAG" ] && npm run deploy
 after_script:
-  - greenkeeper-lockfile-upload
+- greenkeeper-lockfile-upload
