--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "serverful": "1.4.21"
   },
   "devDependencies": {
-    "coveralls": "2.13.3",
-    "eslint": "5.0.1",
+    "coveralls": "3.0.2",
+    "eslint": "5.9.0",
     "eslint-config-hfreire": "1.1.3",
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-jest": "22.0.0",
@@ -38,7 +38,8 @@
     "jest": "22.4.2",
     "npm-merge-driver": "2.3.5",
     "pre-git": "3.17.1",
-    "semantic-release": "15.12.0"
+    "semantic-release": "15.12.0",
+    "snyk": "1.108.2"
   },
   "config": {
     "pre-git": {
@@ -46,6 +47,7 @@
       "allow-untracked-files": true
     }
   },
+  "snyk": true,
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "./test/helper.js",
@@ -74,6 +76,8 @@
   "scripts": {
     "eslint": "./node_modules/.bin/eslint --ext .json --ext .js .",
     "jest": "./node_modules/.bin/jest",
+    "snyk:test": "./node_modules/.bin/snyk test",
+    "snyk:protect": "./node_modules/.bin/snyk protect",
     "docker:build": "DOCKER_REPO=hfreire NAME=$npm_package_name ./share/docker/scripts/build",
     "docker:push": "DOCKER_REPO=hfreire NAME=$npm_package_name ./share/docker/scripts/push",
     "docker:test": "./share/docker/scripts/test",
@@ -82,6 +86,7 @@
     "semantic-release": "./node_modules/.bin/semantic-release",
     "clean": "rm -rf coverage",
     "lint": "npm run eslint",
+    "prepare": "npm run snyk:protect",
     "test": "npm run clean && npm run lint && npm run jest",
     "commit": "./node_modules/.bin/commit-wizard",
     "build": "npm run docker:build",
