fix(docker): use multi-stage and other small Dockerfile tweaks

--- a/share/docker/Dockerfile
+++ b/share/docker/Dockerfile
@@ -1,25 +1,39 @@
-FROM node:13.8.0-alpine
+FROM node:13.8.0-alpine AS node
 
+FROM node AS build
+
+ARG NPM_TOKEN
+
+WORKDIR /tmp/build
+
+# Install npm packages
+COPY package.json package.json
+COPY package-lock.json package-lock.json
+RUN npm install --production
+
+# Build app
+COPY src src/
+RUN set -x \
+  && npm run build --if-present \
+  && npm cache clean --force
+
+FROM node
 LABEL maintainer="hugo@exec.sh"
 
-# Set app runtime environment variables
-ARG NPM_TOKEN
 ARG NAME
-ENV NAME $NAME
 ARG VERSION
-ENV VERSION $VERSION
 ARG VERSION_COMMIT
-ENV VERSION_COMMIT $VERSION_COMMIT
 ARG VERSION_BUILD_DATE
-ENV VERSION_BUILD_DATE $VERSION_BUILD_DATE
 
-# Create app directory
-RUN set -eux; \
-  mkdir /home/node/$NAME; \
-  chown node:node /home/node/$NAME
 WORKDIR /home/node/$NAME
 
-# Install utils
+# Copy app build
+RUN chown node:node /home/node/$NAME
+COPY --from=build --chown=node:node /tmp/build /home/node/$NAME
+COPY share/docker/start.sh start.sh
+COPY share/docker/test.sh test.sh
+
+# Install base utils
 RUN set -x \
   && apk --no-cache add \
     su-exec \
@@ -27,8 +41,6 @@ RUN set -x \
     netcat-openbsd
 
 # Install chromium
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
-ENV PUPPETEER_EXECUTABLE_PATH /usr/bin/chromium-browser
 RUN set -x \
   && apk update && apk upgrade \
   && echo @edge http://nl.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories \
@@ -37,17 +49,12 @@ RUN set -x \
       chromium@edge \
       nss@edge
 
-# Copy app source
-COPY --chown=node:node package.json package.json
-COPY --chown=node:node package-lock.json package-lock.json
-COPY --chown=node:node src src/
-COPY --chown=node:node share/docker/start.sh start.sh
-COPY --chown=node:node share/docker/test.sh test.sh
-
-# Install npm packages
-RUN set -x \
-  && su-exec node npm install --production \
-  && su-exec node npm cache clean --force && npm cache clean --force
+# Set app runtime environment variables
+ENV NAME $NAME
+ENV VERSION $VERSION
+ENV VERSION_COMMIT $VERSION_COMMIT
+ENV VERSION_BUILD_DATE $VERSION_BUILD_DATE
+ENV PUPPETEER_EXECUTABLE_PATH /usr/bin/chromium-browser
 
 EXPOSE 3000
 
