chore(docker): minor tweaks

--- a/share/docker/Dockerfile
+++ b/share/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM node:13.8.0-alpine AS node
 FROM node AS build
 ARG NAME
 ARG NPM_TOKEN
-WORKDIR /tmp/$NAME
+WORKDIR /home/node/$NAME
 
 # Install npm packages
 COPY package.json package-lock.json .snyk ./
@@ -26,7 +26,7 @@ WORKDIR /home/node/$NAME
 
 # Copy app build
 RUN chown node:node /home/node/$NAME
-COPY --from=build --chown=node:node /tmp/$NAME /home/node/$NAME
+COPY --from=build --chown=node:node /home/node/$NAME /home/node/$NAME
 COPY --chown=node:node share/docker/start.sh start.sh
 COPY --chown=node:node share/docker/test.sh test.sh
 
